# OnnxRuntimeforAthena

./: CMakeLists.txt  C_Api_MultipleInputs.cpp  C_Api_Sample.cpp  C_Api_Sample4.cpp  Cpp_Api.cpp  README.md
CUDA/: CMakeLists.txt  Cpp_Api_CUDA.cpp
